--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,10 @@ DB_PASSWORD=
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_USERNAME=polgroup2023@gmail.com
+MAIL_PASSWORD=fyofnpiujqhtsrcs
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=
+MAIL_FROM_ADDRESS=polgroup2023@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 FILE_TYPE="pdf,doc,docx"
